# FFAST

./: .gitignore  tobuild.txt
VMU931/: CMakeLists.txt
VMU931/src/: main.c
catkin_ws/src/ffast/: package.xml
catkin_ws/src/ffast/map/: basement_back.yaml
catkin_ws/src/hardware/hardware/: hardware.launch  package.xml
catkin_ws/src/hardware/teensy/teensy/: CMakeLists.txt
catkin_ws/src/hardware/teensy/teensy/src/: main.cpp  main_with_tf.cpp
catkin_ws/src/hardware/tf_broadcaster/: CMakeLists.txt
catkin_ws/src/hardware/tf_broadcaster/src/: cmd_publisher.cpp  odom_publisher.cpp
catkin_ws/src/hardware/vmu931/include/vmu931/: vmu931.h
catkin_ws/src/hardware/vmu931/src/: msg_utils.cpp  vmu931.cpp
catkin_ws/src/localization/localization/: package.xml
catkin_ws/src/planning/avoid_obs_ilqr/: CMakeLists.txt  package.xml
catkin_ws/src/planning/avoid_obs_ilqr/include/: avoid_obs.h  avoid_obs_ilqr.h  ilqr_params.h
catkin_ws/src/planning/avoid_obs_ilqr/msg/: IlqrInput.msg  IlqrOutput.msg
catkin_ws/src/planning/avoid_obs_ilqr/src/: avoid_obs.cpp  avoid_obs_ilqr.cpp  estop_stamper.cpp  ilqr_params.cpp  set_dyn_obs.cpp
catkin_ws/src/planning/avoid_obs_ilqr/src/iLQG/: iLQG_func.c
catkin_ws/src/planning/planning/: package.xml
catkin_ws/src/planning/planning/launch/: avoid_obs_ilqr.launch  evasive_maneuver.launch
catkin_ws/src/sysid/: CMakeLists.txt  package.xml
catkin_ws/src/sysid/launch/: ramp_steer.launch
catkin_ws/src/sysid/src/: goal1d.cpp  ramp_steer.cpp  spiral.cpp
catkin_ws/src/teensy/teensy/src/: main.cpp  teensy_with_tf.cpp  teensy_without_tf.cpp  vehicle.cpp  vehicle.h
catkin_ws/src/user_interface/: CMakeLists.txt  package.xml
catkin_ws/src/user_interface/src/: joy_listener.cpp  send.cpp
doc/: dependencies.md  remote_connection.md  setup_instructions.md  test_runs.md  vesc_setup.md
hokuyoaist/: .gitignore  CMakeLists.txt  README
hokuyoaist/include/flexiport/: Makefile  cmake_install.cmake
hokuyoaist/lcmtypes/hokuyo/lcmtypes/cpp/: data_scan.hpp
hokuyoaist/src/: CMakeLists.txt  example.cpp  listener.cpp
matlab_simulator/: drift_sim.m  joy_sim.m  ramp_steer.m  sim_const_input.m  ss_cornering_val.m  testDriftCorneringSteadyState.m  testDriftCorneringSteadyState_sim.m  testObs.m
matlab_simulator/DDP-Generator/optDefDriftCornering/: optDefDriftCorneringSteadyState.mac
matlab_simulator/utils/: dynamics.m  iLQGDriftCorneringSteadyState.mexa64  init_vis.m  tire_dyn_r.m  update_plot.m  update_vis.m  vis_seq.m
teensy/src/: lookup.h  main.cpp  vehicle.cpp  vehicle.h
